# CausalSqript

./: .env  README.md  README_PRO.md  Untitled.ipynb  coherent_yaml.py  debug_calculus_matching.py  debug_complex_match.py  debug_priority.py  main.py  pyproject.toml  reproduce_bug.py  reproduce_calculus_rules.py  reproduce_factorize_bug.py  reproduce_fuzzy_i18n.py  reproduce_grading_improvement.py  reproduce_hint.py  reproduce_issues.py  reproduce_matrix_error.coh  reproduce_pending_bounds.py  reproduce_power_rule_error.py  reproduce_rendering.py  reproduce_scenario_log.py  run_tests_bypass.py  sitecustomize.py  test_pickle.py  test_sympy_rendering.py  test_sympy_subs.py  verification_e2e.py  verify_graphviz.py  verify_latex.py  verify_optimizations.py  verify_rendering.py  verify_rules.py  verify_subs.py  verify_v1_2.py  yaml.py
brain_memory/: chroma.sqlite3
cli/: base_runner.py
coherent/: __init__.py
core/: __init__.py  ast_nodes.py  category_analyzer.py  classifier.py  computation_engine.py  core_runtime.py  evaluator.py  hint_engine.py  input_parser.py  knowledge_registry.py  latex_formatter.py  learning_logger.py  logging.py  parser.py  simple_algebra.py  stats_engine.py  symbolic_engine.py  symbolic_strategies.py  unit_engine.py
demo/: core_extended_demo.ipynb  core_extended_demo.py  demo_cli.py  unit_engine_demo.py  validation_engine_demo.py
docs/: COHERENT_Edu_Hint_Generation_AgentSpec.md  COHERENT_LM_Architecture.md  COHERENT_Language_Processing_Design.md  COHERENT_System_Architecture.md  CausalScript UI Directory Specification.md  LIBRARY_MANUAL.md  (+20 more)
(+412 files in other folders)
